{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 55,
  "lineage": "9656fd06-7b40-20e3-7a17-275010094de3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "fullcycle-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068637447302:internet-gateway/igw-0ff0abab43885d821",
            "id": "igw-0ff0abab43885d821",
            "owner_id": "068637447302",
            "tags": {
              "Name": "fullcycle-igw"
            },
            "tags_all": {
              "Name": "fullcycle-igw"
            },
            "vpc_id": "vpc-0133767fd050e1429"
          },
          "dependencies": [
            "aws_vpc.fullcycle-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fullcycle-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068637447302:route-table/rtb-035b6fc7c59dd6102",
            "id": "rtb-035b6fc7c59dd6102",
            "owner_id": "068637447302",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ff0abab43885d821",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fullcycle-rtb"
            },
            "tags_all": {
              "Name": "fullcycle-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0133767fd050e1429"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.fullcycle-igw",
            "aws_vpc.fullcycle-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "fullcycle-rtb-associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ef432a7057f90c8",
            "route_table_id": "rtb-035b6fc7c59dd6102",
            "subnet_id": "subnet-05415d2cf78120779"
          },
          "dependencies": [
            "aws_internet_gateway.fullcycle-igw",
            "aws_route_table.fullcycle-rtb",
            "aws_subnet.fullcycle-subnets",
            "aws_vpc.fullcycle-vpc",
            "data.aws_availability_zones.aws-availability-zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062650ca72fac8c23",
            "route_table_id": "rtb-035b6fc7c59dd6102",
            "subnet_id": "subnet-0d84104ef4b1619d1"
          },
          "dependencies": [
            "aws_internet_gateway.fullcycle-igw",
            "aws_route_table.fullcycle-rtb",
            "aws_subnet.fullcycle-subnets",
            "aws_vpc.fullcycle-vpc",
            "data.aws_availability_zones.aws-availability-zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fullcycle-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068637447302:security-group/sg-0da0a729c1ab8c99d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0da0a729c1ab8c99d",
            "ingress": [],
            "name": "terraform-20240825151951233300000001",
            "name_prefix": "terraform-",
            "owner_id": "068637447302",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fullcycle-sg"
            },
            "tags_all": {
              "Name": "fullcycle-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0133767fd050e1429"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fullcycle-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fullcycle-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068637447302:subnet/subnet-05415d2cf78120779",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05415d2cf78120779",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "068637447302",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fullcycle-subnet-0"
            },
            "tags_all": {
              "Name": "fullcycle-subnet-0"
            },
            "vpc_id": "vpc-0133767fd050e1429"
          },
          "dependencies": [
            "aws_vpc.fullcycle-vpc",
            "data.aws_availability_zones.aws-availability-zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068637447302:subnet/subnet-0d84104ef4b1619d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d84104ef4b1619d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "068637447302",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fullcycle-subnet-1"
            },
            "tags_all": {
              "Name": "fullcycle-subnet-1"
            },
            "vpc_id": "vpc-0133767fd050e1429"
          },
          "dependencies": [
            "aws_vpc.fullcycle-vpc",
            "data.aws_availability_zones.aws-availability-zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "fullcycle-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068637447302:vpc/vpc-0133767fd050e1429",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fe50982b28825e30",
            "default_route_table_id": "rtb-0a4b8c043e1918887",
            "default_security_group_id": "sg-06a97fd4bfb759ff1",
            "dhcp_options_id": "dopt-09432f73",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0133767fd050e1429",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a4b8c043e1918887",
            "owner_id": "068637447302",
            "tags": {
              "Name": "fullcycle-vpc"
            },
            "tags_all": {
              "Name": "fullcycle-vpc"
            }
          }
        }
      ]
    }
  ]
}